--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - sphinx-build -nW -b html -d build/doctrees . build/html
-  - touch build/html/.nojekyll 
+  - sphinx-build -nW -b html -d _build/doctrees . _build/html
+  - touch _build/html/.nojekyll 
 
 # Tell Travis CI to copy the documentation to the gh-pages branch of
 # your GitHub repository.
