--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
 script:
   - sphinx-build -nW -b html -d _build/doctrees . _build/html
   - touch _build/html/.nojekyll 
+  - cp CNAME _build/html
 
 # Tell Travis CI to copy the documentation to the gh-pages branch of
 # your GitHub repository.
